--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
         </div>
     </main>
     <footer>
+        <div class="footer-content">
+            <a href="https://github.com/xexidev/nextbus" title="View project on GitHub" target="_blank">GitHub</a> · 
+            <a href="https://www.xexi.es" title="xexi.es" target="_blank">xexi.es</a> · 
+            <a href="mailto:hola@xexi.es" title="hola@xexi.es" target="_blank">hola@xexi.es</a> · 
+            xexi 2023
+        </div>
     </footer>
     <script type="module" src="./app.js"></script>
 </body>
